"""codegen（v2 → WAT）: スナップショット・非対応の構文の拒み方・決定性・module の形（jil.md §6）。

スナップショットは `__snapshots__/test_codegen.ambr`（syrupy）。生成部の形を変えたら
`uv run pytest packages/jin-wasmgc --snapshot-update` で更新し、**差分を読んでから**コミットする。
ランタイム部は別ファイル（`runtime.wat`）なのでスナップショットには生成部だけを載せる。
"""

from __future__ import annotations

import json
import re
from pathlib import Path

import pytest
from jin_core.check import check_file, check_text
from jin_core.v2.model import JinFileV2
from jin_wasm.jil import JIL_VERSION
from jin_wasmgc.assemble import GAME_WASM, TARGET, assemble, runtime_source
from jin_wasmgc.codegen import DATA_BASE, generate_program, wat_number, wat_string
from jin_wasmgc.runtime import EXPORTS
from wasmtime import Engine, Module

REPO_ROOT = Path(__file__).resolve().parents[3]
EXAMPLES = REPO_ROOT / "examples-v2"
PROGRAMS = REPO_ROOT / "tests" / "fixtures" / "v2-programs"
FIB = EXAMPLES / "fib" / "fib.jin"


def load(path: Path) -> JinFileV2:
    result = check_file(path)
    assert result.ok, [d.message for d in result.diagnostics]
    assert isinstance(result.model, JinFileV2)
    return result.model


def model_from(doc: dict) -> JinFileV2:
    result = check_text(json.dumps(doc), "t.jin")
    assert result.ok, [d.message for d in result.diagnostics]
    assert isinstance(result.model, JinFileV2)
    return result.model


def circle(name: str, state: list[dict], rites: list[dict], **extra) -> dict:
    return {"name": name, "core": "main", "state": state, "rites": rites, **extra}


def doc(*circles: dict, root: str = "T") -> dict:
    return {
        "$schema": "https://xtone.internal/jin/schemas/jin-v2.schema.json",
        "version": 2,
        "root": root,
        "stage": {"width": 64, "height": 64},
        "circles": list(circles),
    }


# ---------------------------------------------------------------- リテラル


@pytest.mark.parametrize(
    ("value", "expected"),
    [(160.0, "160.0"), (1.05, "1.05"), (0.0, "0.0"), (1e20, "1e+20"), (-2.5, "-2.5"), (3, "3.0")],
)
def test_wat_number_is_a_wat_float_literal(value: float, expected: str) -> None:
    assert wat_number(value) == expected


def test_wat_number_names_the_specials() -> None:
    assert wat_number(float("inf")) == "inf"
    assert wat_number(float("-inf")) == "-inf"
    assert wat_number(float("nan")) == "nan"


@pytest.mark.parametrize(
    ("text", "expected"),
    [
        ("", '""'),
        ('"Fib.answer":', '"\\22Fib.answer\\22:"'),
        ("a\\b", '"a\\5cb"'),
        ("\n\t\x00\x7f", '"\\0a\\09\\00\\7f"'),
        ("日", '"\\e6\\97\\a5"'),
    ],
)
def test_wat_string_escapes_everything_but_printable_ascii(text: str, expected: str) -> None:
    assert wat_string(text) == expected


# ---------------------------------------------------------------- スナップショットと決定性


EXAMPLE_NAMES = ["fib", "paddle", "clicker"]
PROGRAM_NAMES = sorted(p.stem for p in PROGRAMS.glob("*.jin"))


def fixture_path(name: str) -> Path:
    return (
        (EXAMPLES / name / f"{name}.jin")
        if (EXAMPLES / name).is_dir()
        else PROGRAMS / f"{name}.jin"
    )


@pytest.mark.parametrize("name", EXAMPLE_NAMES)
@pytest.mark.parametrize("debug", [True, False], ids=["debug", "release"])
def test_program_snapshot(name: str, debug: bool, snapshot) -> None:
    """生成部のスナップショット（Lua 側と同じ 3 本 × debug / release。wait の状態機械の形は仕様にせずここで固定する）。"""
    assert generate_program(load(fixture_path(name)), debug=debug) == snapshot


def test_two_assemblies_are_byte_identical() -> None:
    a = assemble(load(FIB), source_name="fib.jin")
    b = assemble(load(FIB), source_name="fib.jin")
    assert a.wasm == b.wasm and a.manifest == b.manifest
    assert isinstance(a.wasm, bytes)


def test_header_names_the_shared_jil_version() -> None:
    game = assemble(load(FIB), source_name="fib.jin")
    lines = game.wat.splitlines()
    assert lines[0] == ";; generated by jin — do not edit"
    assert lines[1] == ';; source: "fib.jin"'
    assert lines[2] == f";; jin: 2  jil: {JIL_VERSION}  target: wasm-gc"


def test_a_control_character_in_the_source_name_cannot_escape_the_comment() -> None:
    game = assemble(load(FIB), source_name="a\nb.jin")
    assert game.wat.splitlines()[1] == ';; source: "a\\010b.jin"'


def test_manifest_shares_the_common_part_and_names_the_target() -> None:
    from jin_wasm.codegen import generate as generate_lua

    wasm = assemble(load(FIB), source_name="fib.jin")
    lua = generate_lua(load(FIB), source_name="fib.jin")
    common = {k: v for k, v in lua.manifest.items() if k != "jil"}
    assert {k: v for k, v in wasm.manifest.items() if k not in ("target", "wasm")} == common
    assert wasm.manifest["target"] == TARGET == "wasm-gc"
    assert re.fullmatch(r"[0-9a-f]{64}", wasm.manifest["wasm"])
    assert "jil" not in wasm.manifest
    assert list(wasm.manifest) == [*common, "target", "wasm"]
    assert GAME_WASM == "game.wasm"


# ---------------------------------------------------------------- module の形（jil.md §6.2）


def test_module_has_no_imports_and_exactly_the_host_exports() -> None:
    game = assemble(load(FIB))
    module = Module(Engine(), game.wasm)
    assert module.imports == []
    assert {e.name for e in module.exports} == set(EXPORTS) == {"memory", "input", "boot", "tick"}


def _data_segments(wat: str) -> dict[int, bytes]:
    out: dict[int, bytes] = {}
    for m in re.finditer(r'\(data \(i32\.const (\d+)\) "((?:[^"\\]|\\.)*)"\)', wat):
        text = m.group(2)
        raw = bytearray()
        i = 0
        while i < len(text):
            if text[i] == "\\":
                if text[i + 1] in ("\\", '"'):
                    raw.append(ord(text[i + 1]))
                    i += 2
                else:
                    raw.append(int(text[i + 1 : i + 3], 16))
                    i += 3
            else:
                raw.append(ord(text[i]))
                i += 1
        out[int(m.group(1))] = bytes(raw)
    return out


def test_runtime_strings_stay_below_the_program_data_base() -> None:
    """`runtime.wat` の文字列は [0, DATA_BASE) に閉じ、`$puts` / `$mem_str` などの (番地, 長さ) は実在の文字列を指す。"""
    source = runtime_source()
    segments = _data_segments(source)
    assert segments, "runtime.wat の data 区画が読めない"
    assert min(segments) == 0
    assert max(off + len(raw) for off, raw in segments.items()) <= DATA_BASE
    for expected in (b"NaN", b"Infinity", b"true", b"false", b"null", b'{"ops":[', b'],"audio":['):
        assert expected in segments.values(), expected
    # 番地 + 長さの組はすべて data 区画の文字列（手で振った定数がずれていない）
    pairs = re.findall(
        r"\(call \$(?:puts|mem_str) \(i32\.const (\d+)\) \(i32\.const (\d+)\)\)", source
    )
    pairs += re.findall(
        r"\$(?:str_eq_mem|j_getk) [^\n]*? \(i32\.const (\d+)\) \(i32\.const (\d+)\)\)", source
    )
    assert len(pairs) > 40
    for off, length in pairs:
        assert segments.get(int(off)) is not None and len(segments[int(off)]) == int(length), (
            off,
            length,
        )
    assert "$put_jn" in source  # 生成部の pub_i が呼ぶ JSON の数値（JN 相当）


def test_program_data_starts_at_the_base_and_the_input_area_follows() -> None:
    program = generate_program(load(FIB))
    segments = _data_segments(program)
    assert min(segments) == DATA_BASE
    assert b'"Fib.answer":' in segments.values()
    in_base = int(re.search(r"\(global \$in_base i32 \(i32\.const (\d+)\)\)", program).group(1))
    assert in_base % 16 == 0 and in_base >= max(o + len(r) for o, r in segments.items())


def test_string_literals_are_passive_data_created_with_array_new_data() -> None:
    state = [{"name": "s", "type": "str", "init": '"日本 \\"q\\""', "out": True}]
    program = generate_program(model_from(doc(circle("T", state, [{"name": "main", "steps": []}]))))
    assert '(data $L0 "\\e6\\97\\a5\\e6\\9c\\ac \\22q\\22")' in program
    assert "(array.new_data $str $L0 (i32.const 0) (i32.const 10))" in program


# ---------------------------------------------------------------- 名前を識別子に埋めない（jil.md §6.3）


def test_names_appear_only_in_the_data_section() -> None:
    program = generate_program(load(FIB))
    code = re.sub(r";;.*", "", program)  # コメントは名前を含んでよい
    code = re.sub(r'\(data \(i32\.const \d+\) "[^"]*"\)', "", code)
    assert "Fib" not in code and "answer" not in code and "fib" not in code
    assert "$S0" in program and "$r0_0" in program and "$l0" in program


# ---------------------------------------------------------------- 全 fixture が両ビルドで assemble できる（#75）


@pytest.mark.parametrize("name", [*EXAMPLE_NAMES, *PROGRAM_NAMES])
@pytest.mark.parametrize("debug", [True, False], ids=["debug", "release"])
def test_every_example_and_fixture_assembles(name: str, debug: bool) -> None:
    game = assemble(load(fixture_path(name)), source_name=f"{name}.jin", debug=debug)
    module = Module(Engine(), game.wasm)
    assert module.imports == [] and {e.name for e in module.exports} == set(EXPORTS)
    assert game.manifest["debug"] is debug


def test_release_generates_no_trace_rows_and_debug_does() -> None:
    release = generate_program(load(fixture_path("paddle")))
    debug = generate_program(load(fixture_path("paddle")), debug=True)
    assert "(call $row " not in release and "(global $DEBUG i32 (i32.const 0))" in release
    assert "(call $row " in debug and "(global $DEBUG i32 (i32.const 1))" in debug
    assert "$restore" not in release and "$restore1" in debug  # resume の読み手は debug だけ


def test_only_rites_that_can_wait_get_a_frame() -> None:
    """wait の閉包（`jin_wasm.program.rite_waits`）に入る手順だけが `$W<i>_<j>` のフレームと `$r<i>_<j>w` になる。"""
    program = generate_program(load(fixture_path("clicker")))
    assert (
        "(type $W0_0 (struct" in program and "(func $r0_0w (param $fr (ref $W0_0))" in program
    )  # grow
    assert "$W0_1" not in program and "(func $r0_1 " in program  # screen は普通の関数
    fib = generate_program(load(FIB))
    assert "$W" not in fib and "$prog_resume" in fib


def test_the_single_wait_target_refuses_nothing_but_names_the_next_sub_issue_for_the_player() -> (
    None
):
    """#75 で生成できない構文は無くなった（プレイヤー同梱と --single は #76・CLI 側が断る）。"""
    for name in [*EXAMPLE_NAMES, *PROGRAM_NAMES]:
        generate_program(load(fixture_path(name)), debug=True)
