# serializer version: 1
# name: test_program_snapshot[debug-clicker]
  '''
    (rec
      (type $S0 (struct (field (mut f64)) (field (mut f64)) (field (mut (ref $str)))))
    )
    (func $jf0 (param $v (ref null $F0))  ;; Pointer
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F0 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F0 1 (local.get $v)))
      (call $puts (i32.const 2057) (i32.const 8))
      (call $put_bool (struct.get $F0 2 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $jr0 (param $v (ref null $J)) (result (ref null $F0))  ;; Pointer
      (local $f0 f64) (local $f1 f64) (local $f2 i32)
      (if (i32.eqz (call $rd_rec (local.get $v))) (then (global.set $RD_OK (i32.const 0)) (return (ref.null $F0))))
      (local.set $f0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2065) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (local.set $f1 (call $rd_n (call $j_getk (local.get $v) (i32.const 2066) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (local.set $f2 (call $rd_b (call $j_getk (local.get $v) (i32.const 2067) (i32.const 4))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (global.set $RD_OK (i32.const 1))
      (struct.new $F0 (local.get $f0) (local.get $f1) (local.get $f2)))
    (func $r0_0w (param $fr (ref $W0_0)) (result i32) ;; Clicker.grow（wait を含む）
      (local $rs i32) (local $ob (ref null $buf))
      (local.set $rs (i32.ne (struct.get $W0_0 0 (local.get $fr)) (i32.const 0)))
      (if (i32.eqz (local.get $rs))
        (then
        (local.set $ob (call $fmt_begin))
        (call $putc (i32.const 91))
        (call $putc (i32.const 93))
        (struct.set $W0_0 1 (local.get $fr) (call $row (i32.const 3) (i32.const 0) (call $mem_str (i32.const 2071) (i32.const 4)) (call $mem_str (i32.const 2075) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
        ))
      (if (i32.or (i32.eqz (local.get $rs)) (i32.and (i32.gt_s (struct.get $W0_0 0 (local.get $fr)) (i32.const 0)) (i32.le_s (struct.get $W0_0 0 (local.get $fr)) (i32.const 1))))
        (then
          (block $brk1
            (loop $loop2
              (if (i32.eqz (local.get $rs))
                (then
                  (br_if $brk1 (i32.eqz (i32.const 1)))
                ))
              (if (local.get $rs)
                (then (if (i32.eq (struct.get $W0_0 0 (local.get $fr)) (i32.const 1)) (then (local.set $rs (i32.const 0)))))
                (else
                  (global.set $WREQ_KIND (i32.const 1))
                  (global.set $WREQ_TICKS (call $wait_ticks_of (f64.const 60.0)))
                  (global.set $WREQ_PTR (call $mem_str (i32.const 2093) (i32.const 34)))
                  (global.set $WREQ_TOP (local.get $fr))
                  (struct.set $W0_0 0 (local.get $fr) (i32.const 1))
                  (return (i32.const 1))))
              (if (i32.eqz (local.get $rs))
                (then
                  (struct.set $S0 0 (global.get $S0) (f64.add (struct.get $S0 0 (global.get $S0)) (struct.get $S0 1 (global.get $S0))))
                  (local.set $ob (call $fmt_begin))
                  (call $put_jn (struct.get $S0 0 (global.get $S0)))
                  (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2127) (i32.const 5)) (call $mem_str (i32.const 2132) (i32.const 34)) (ref.null $str) (call $fmt_end (local.get $ob))))
                  (if (f64.lt (call $h_random_next) (f64.const 0.1))
                    (then
                      (if (i32.eqz (local.get $rs))
                        (then
                          (struct.set $S0 2 (global.get $S0) (array.new_data $str $L0 (i32.const 0) (i32.const 9)))
                          (local.set $ob (call $fmt_begin))
                          (call $put_js (struct.get $S0 2 (global.get $S0)))
                          (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2166) (i32.const 5)) (call $mem_str (i32.const 2171) (i32.const 41)) (ref.null $str) (call $fmt_end (local.get $ob))))
                          (struct.set $S0 0 (global.get $S0) (f64.add (struct.get $S0 0 (global.get $S0)) (f64.const 10.0)))
                          (local.set $ob (call $fmt_begin))
                          (call $put_jn (struct.get $S0 0 (global.get $S0)))
                          (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2127) (i32.const 5)) (call $mem_str (i32.const 2212) (i32.const 41)) (ref.null $str) (call $fmt_end (local.get $ob))))
                        ))
                    )
                    (else
                      (if (i32.eqz (local.get $rs))
                        (then
                          (struct.set $S0 2 (global.get $S0) (array.new_data $str $L1 (i32.const 0) (i32.const 0)))
                          (local.set $ob (call $fmt_begin))
                          (call $put_js (struct.get $S0 2 (global.get $S0)))
                          (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2166) (i32.const 5)) (call $mem_str (i32.const 2253) (i32.const 41)) (ref.null $str) (call $fmt_end (local.get $ob))))
                        ))
                    )
                  )
                ))
              (call $bud)
              (br_if $brk1 (global.get $ERRED))
              (br $loop2)
            )
          )
          (if (global.get $ERRED) (then (return (i32.const 0))))
        ))
      (i32.const 0))
    (func $run0_0
      (local $fr (ref null $W0_0))
      (local.set $fr (struct.new_default $W0_0))
      (if (call $r0_0w (ref.as_non_null (local.get $fr))) (then (call $register_wait (i32.const 0) (i32.const 0) (local.get $fr)))))
    (func $r0_1 ;; Clicker.screen
      (local $ob (ref null $buf))
      (local $l0 (ref null $Row))
      (local $l1 (ref null $str))
      (local $l2 (ref null $Row))
      (local $l3 (ref null $str))
      (local $l4 f64)
      (local $l5 f64)
      (local $l6 (ref null $Row))
      (local $l7 (ref null $str))
      (local $l8 f64)
      (local $l9 f64)
      (local $l10 (ref null $Row))
      (local $l11 (ref null $str))
      (local $l12 f64)
      (local $l13 f64)
      (local $l14 (ref null $Row))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $putc (i32.const 93))
      (local.set $l0 (call $row (i32.const 3) (i32.const 0) (call $mem_str (i32.const 2294) (i32.const 6)) (call $mem_str (i32.const 2300) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (local.set $l1 (array.new_data $str $L2 (i32.const 0) (i32.const 4)))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l1)))
      (call $putc (i32.const 93))
      (local.set $l2 (call $row (i32.const 4) (i32.const 0) (call $mem_str (i32.const 2318) (i32.const 12)) (call $mem_str (i32.const 2330) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_clear (ref.as_non_null (local.get $l1)))
      (if (global.get $ERRED) (then (return)))
      (local.set $l3 (call $str_cat (array.new_data $str $L3 (i32.const 0) (i32.const 8)) (call $f_str (struct.get $S0 0 (global.get $S0)))))
      (local.set $l4 (f64.const 8.0))
      (local.set $l5 (f64.const 8.0))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l3)))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l4))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l5))
      (call $putc (i32.const 93))
      (local.set $l6 (call $row (i32.const 4) (i32.const 0) (call $mem_str (i32.const 2356) (i32.const 8)) (call $mem_str (i32.const 2364) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_ui_label (ref.as_non_null (local.get $l3)) (local.get $l4) (local.get $l5))
      (if (global.get $ERRED) (then (return)))
      (local.set $l7 (call $str_cat (call $str_cat (array.new_data $str $L4 (i32.const 0) (i32.const 5)) (call $f_str (struct.get $S0 1 (global.get $S0)))) (array.new_data $str $L5 (i32.const 0) (i32.const 2))))
      (local.set $l8 (f64.const 8.0))
      (local.set $l9 (f64.const 20.0))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l7)))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l8))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l9))
      (call $putc (i32.const 93))
      (local.set $l10 (call $row (i32.const 4) (i32.const 0) (call $mem_str (i32.const 2356) (i32.const 8)) (call $mem_str (i32.const 2390) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_ui_label (ref.as_non_null (local.get $l7)) (local.get $l8) (local.get $l9))
      (if (global.get $ERRED) (then (return)))
      (local.set $l11 (struct.get $S0 2 (global.get $S0)))
      (local.set $l12 (f64.const 8.0))
      (local.set $l13 (f64.const 32.0))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l11)))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l12))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l13))
      (call $putc (i32.const 93))
      (local.set $l14 (call $row (i32.const 4) (i32.const 0) (call $mem_str (i32.const 2356) (i32.const 8)) (call $mem_str (i32.const 2416) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_ui_label (ref.as_non_null (local.get $l11)) (local.get $l12) (local.get $l13))
      (if (global.get $ERRED) (then (return)))
      (if (call $h_ui_button (array.new_data $str $L6 (i32.const 0) (i32.const 5)) (f64.const 20.0) (f64.const 60.0) (f64.const 90.0) (f64.const 28.0))
        (then
          (struct.set $S0 0 (global.get $S0) (f64.add (struct.get $S0 0 (global.get $S0)) (f64.const 1.0)))
          (local.set $ob (call $fmt_begin))
          (call $put_jn (struct.get $S0 0 (global.get $S0)))
          (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2127) (i32.const 5)) (call $mem_str (i32.const 2442) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
        )
      )
      (if (if (result i32) (call $h_ui_button (array.new_data $str $L7 (i32.const 0) (i32.const 7)) (f64.const 130.0) (f64.const 60.0) (f64.const 90.0) (f64.const 28.0)) (then (f64.ge (struct.get $S0 0 (global.get $S0)) (f64.const 10.0))) (else (i32.const 0)))
        (then
          (struct.set $S0 0 (global.get $S0) (f64.sub (struct.get $S0 0 (global.get $S0)) (f64.const 10.0)))
          (local.set $ob (call $fmt_begin))
          (call $put_jn (struct.get $S0 0 (global.get $S0)))
          (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2127) (i32.const 5)) (call $mem_str (i32.const 2475) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
          (struct.set $S0 1 (global.get $S0) (f64.add (struct.get $S0 1 (global.get $S0)) (f64.const 1.0)))
          (local.set $ob (call $fmt_begin))
          (call $put_jn (struct.get $S0 1 (global.get $S0)))
          (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2508) (i32.const 4)) (call $mem_str (i32.const 2512) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
        )
      )
      (if (call $h_ui_button (array.new_data $str $L8 (i32.const 0) (i32.const 4)) (f64.const 75.0) (f64.const 110.0) (f64.const 90.0) (f64.const 28.0))
        (then
          (drop (call $row (i32.const 9) (i32.const 0) (ref.null $str) (call $mem_str (i32.const 2545) (i32.const 33)) (ref.null $str) (ref.null $str)))
          (call $finish (i32.const 0))
          (return)
        )
      )
    )
    (func $run0_1
      (call $r0_1))
    ;; circle 0: Clicker
    (global $S0 (mut (ref $S0)) (struct.new $S0 (f64.const 0) (f64.const 0) (array.new_fixed $str 0)))
    (global $P0 (mut (ref $S0)) (struct.new $S0 (f64.const 0) (f64.const 0) (array.new_fixed $str 0)))
    (func $init0 (global.set $S0 (struct.new $S0 (f64.const 0.0) (f64.const 0.0) (array.new_data $str $L1 (i32.const 0) (i32.const 0)))))
    (func $publish0
      (struct.set $S0 0 (global.get $P0) (struct.get $S0 0 (global.get $S0)))
    )
    (func $pub0
      (call $pub_comma)
      (call $puts (i32.const 2578) (i32.const 16))
      (call $put_jn (struct.get $S0 0 (global.get $P0)))
    )
    (func $dump0
      (call $putc (i32.const 123))
      (call $puts (i32.const 2594) (i32.const 8))
      (call $put_jn (struct.get $S0 0 (global.get $S0)))
      (call $puts (i32.const 2602) (i32.const 8))
      (call $put_jn (struct.get $S0 1 (global.get $S0)))
      (call $puts (i32.const 2610) (i32.const 9))
      (call $put_js (struct.get $S0 2 (global.get $S0)))
      (call $putc (i32.const 125)))
    (func $pdump0
      (call $putc (i32.const 123))
      (call $puts (i32.const 2594) (i32.const 8))
      (call $put_jn (struct.get $S0 0 (global.get $P0)))
      (call $putc (i32.const 125)))
    (func $restore0 (param $v (ref null $J))
      (local $x0 f64)
      (local $x1 f64)
      (local $x2 (ref null $str))
      (local.set $x0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2127) (i32.const 5))))
      (if (global.get $RD_OK) (then (struct.set $S0 0 (global.get $S0) (local.get $x0))))
      (local.set $x1 (call $rd_n (call $j_getk (local.get $v) (i32.const 2508) (i32.const 4))))
      (if (global.get $RD_OK) (then (struct.set $S0 1 (global.get $S0) (local.get $x1))))
      (local.set $x2 (call $rd_s (call $j_getk (local.get $v) (i32.const 2166) (i32.const 5))))
      (if (global.get $RD_OK) (then (struct.set $S0 2 (global.get $S0) (ref.as_non_null (local.get $x2)))))
    )
    (func $prestore0 (param $v (ref null $J))
      (local $x0 f64)
      (local.set $x0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2127) (i32.const 5))))
      (if (global.get $RD_OK) (then (struct.set $S0 0 (global.get $P0) (local.get $x0))))
    )
    (func $guards0
      (local $ob (ref null $buf))
      (local.set $ob (call $fmt_begin))
      (call $put_js (call $mem_str (i32.const 2619) (i32.const 27)))
      (if (i32.eqz (f64.ge (struct.get $S0 0 (global.get $S0)) (f64.const 0.0))) (then (drop (call $row (i32.const 10) (i32.const 0) (ref.null $str) (call $mem_str (i32.const 2646) (i32.const 28)) (ref.null $str) (call $fmt_end (local.get $ob))))))
    )
    (func $on_tick0
      (local $ob (ref null $buf))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_jn (f64.div (f64.const 1) (global.get $FPS)))
      (call $putc (i32.const 93))
      (drop (call $row (i32.const 2) (i32.const 0) (call $mem_str (i32.const 2698) (i32.const 4)) (call $mem_str (i32.const 2674) (i32.const 24)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $run0_1))
    (func $prog_flow (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_nchildren (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_child (param $i i32) (param $k i32) (result i32)
      (i32.const -1))
    (func $prog_exit (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_init (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $init0) (return)))
      )
    (func $prog_publish (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $publish0) (return)))
      )
    (func $prog_has_outs (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_pub (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $pub0) (return)))
      )
    (func $prog_core (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $run0_0) (return)))
      )
    (func $prog_name (param $i i32) (result (ref $str))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $mem_str (i32.const 2702) (i32.const 7)))))
      (call $str_empty))
    (func $prog_find (param $s (ref null $str)) (result i32)
      (if (call $str_eq_mem (local.get $s) (i32.const 2702) (i32.const 7)) (then (return (i32.const 0))))
      (i32.const -1))
    (func $prog_has_on (param $i i32) (param $kind i32) (result i32)
      (if (i32.and (i32.eq (local.get $i) (i32.const 0)) (i32.eq (local.get $kind) (i32.const 3))) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_on_key (param $i i32) (param $k i32)
      )
    (func $prog_on_pointer (param $i i32) (param $k i32)
      )
    (func $prog_on_tick (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $on_tick0) (return)))
      )
    (func $prog_on_exit (param $i i32)
      )
    (func $prog_deliver (param $i i32) (param $m (ref null $Msg))
      )
    (func $prog_reply (param $i i32) (param $id f64) (param $text (ref $str))
      )
    (func $prog_resume (param $i i32) (param $fr anyref) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $r0_0w (ref.cast (ref $W0_0) (local.get $fr))))))
      (i32.const 0))
    (func $prog_until (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_dump (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $dump0) (return)))
      )
    (func $prog_pdump (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $pdump0) (return)))
      )
    (func $prog_restore (param $i i32) (param $v (ref null $J))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $restore0 (local.get $v)) (return)))
      )
    (func $prog_prestore (param $i i32) (param $v (ref null $J))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $prestore0 (local.get $v)) (return)))
      )
    (func $prog_guards (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $guards0) (return)))
      )
    (global $ROOT i32 (i32.const 0))
    (global $N i32 (i32.const 1))
    (global $FPS f64 (f64.const 60.0))
    (global $DEBUG i32 (i32.const 1))
    (rec
      (type $W0_0 (struct (field (mut i32)) (field (mut (ref null $Row)))))  ;; Clicker.grow
    )
    (data $L0 "LUCKY +10")
    (data $L1 "")
    (data $L2 "#123")
    (data $L3 "COOKIES ")
    (data $L4 "RATE ")
    (data $L5 "/s")
    (data $L6 "CLICK")
    (data $L7 "UPGRADE")
    (data $L8 "DONE")
    (data (i32.const 2048) "\22x\22:")
    (data (i32.const 2052) ",\22y\22:")
    (data (i32.const 2057) ",\22down\22:")
    (data (i32.const 2065) "x")
    (data (i32.const 2066) "y")
    (data (i32.const 2067) "down")
    (data (i32.const 2071) "grow")
    (data (i32.const 2075) "/circles/0/rites/0")
    (data (i32.const 2093) "/circles/0/rites/0/steps/0/steps/0")
    (data (i32.const 2127) "count")
    (data (i32.const 2132) "/circles/0/rites/0/steps/0/steps/1")
    (data (i32.const 2166) "bonus")
    (data (i32.const 2171) "/circles/0/rites/0/steps/0/steps/2/then/0")
    (data (i32.const 2212) "/circles/0/rites/0/steps/0/steps/2/then/1")
    (data (i32.const 2253) "/circles/0/rites/0/steps/0/steps/2/else/0")
    (data (i32.const 2294) "screen")
    (data (i32.const 2300) "/circles/0/rites/1")
    (data (i32.const 2318) "canvas.clear")
    (data (i32.const 2330) "/circles/0/rites/1/steps/0")
    (data (i32.const 2356) "ui.label")
    (data (i32.const 2364) "/circles/0/rites/1/steps/1")
    (data (i32.const 2390) "/circles/0/rites/1/steps/2")
    (data (i32.const 2416) "/circles/0/rites/1/steps/3")
    (data (i32.const 2442) "/circles/0/rites/1/steps/4/then/0")
    (data (i32.const 2475) "/circles/0/rites/1/steps/5/then/0")
    (data (i32.const 2508) "rate")
    (data (i32.const 2512) "/circles/0/rites/1/steps/5/then/1")
    (data (i32.const 2545) "/circles/0/rites/1/steps/6/then/0")
    (data (i32.const 2578) "\22Clicker.count\22:")
    (data (i32.const 2594) "\22count\22:")
    (data (i32.const 2602) ",\22rate\22:")
    (data (i32.const 2610) ",\22bonus\22:")
    (data (i32.const 2619) "count \e3\81\af\e8\b2\a0\e3\81\ab\e3\81\aa\e3\82\89\e3\81\aa\e3\81\84")
    (data (i32.const 2646) "/circles/0/boundary/guards/0")
    (data (i32.const 2674) "/circles/0/boundary/on/0")
    (data (i32.const 2698) "tick")
    (data (i32.const 2702) "Clicker")
    (global $in_base i32 (i32.const 2720))
    (memory (export "memory") 3)
  
  '''
# ---
# name: test_program_snapshot[debug-fib]
  '''
    (rec
      (type $S0 (struct (field (mut f64))))
    )
    (func $jf0 (param $v (ref null $F0))  ;; Pointer
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F0 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F0 1 (local.get $v)))
      (call $puts (i32.const 2057) (i32.const 8))
      (call $put_bool (struct.get $F0 2 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $jr0 (param $v (ref null $J)) (result (ref null $F0))  ;; Pointer
      (local $f0 f64) (local $f1 f64) (local $f2 i32)
      (if (i32.eqz (call $rd_rec (local.get $v))) (then (global.set $RD_OK (i32.const 0)) (return (ref.null $F0))))
      (local.set $f0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2065) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (local.set $f1 (call $rd_n (call $j_getk (local.get $v) (i32.const 2066) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (local.set $f2 (call $rd_b (call $j_getk (local.get $v) (i32.const 2067) (i32.const 4))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (global.set $RD_OK (i32.const 1))
      (struct.new $F0 (local.get $f0) (local.get $f1) (local.get $f2)))
    (func $r0_0 (param $l0 f64) (result f64) ;; Fib.fib
      (local $ob (ref null $buf))
      (local $l1 (ref null $Row))
      (local $l2 f64)
      (local $l3 f64)
      (local $l4 f64)
      (local $l5 f64)
      (local $l6 f64)
      (local $l7 f64)
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_jn (local.get $l0))
      (call $putc (i32.const 93))
      (local.set $l1 (call $row (i32.const 3) (i32.const 0) (call $mem_str (i32.const 2071) (i32.const 3)) (call $mem_str (i32.const 2074) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (local.set $l2 (f64.const 0.0))
      (local.set $l3 (f64.const 1.0))
      (local.set $l4 (f64.floor (local.get $l0)))
      (local.set $l5 (f64.const 0))
      (block $brk1
        (loop $loop2
          (br_if $brk1 (i32.eqz (f64.lt (local.get $l5) (local.get $l4))))
          (local.set $l6 (f64.add (local.get $l2) (local.get $l3)))
          (local.set $l2 (local.get $l3))
          (local.set $l3 (local.get $l6))
          (local.set $l5 (f64.add (local.get $l5) (f64.const 1)))
          (call $bud)
          (br_if $brk1 (global.get $ERRED))
          (br $loop2)
        )
      )
      (if (global.get $ERRED) (then (return (f64.const 0))))
      (local.set $l7 (local.get $l2))
      (local.set $ob (call $fmt_begin))
      (call $put_jn (local.get $l7))
      (call $row_out (local.get $l1) (call $fmt_end (local.get $ob)))
      (return (local.get $l7))
      (unreachable)
    )
    (func $run0_0 (param $l0 f64)
      (drop (call $r0_0 (local.get $l0))))
    (func $r0_1 ;; Fib.main
      (local $ob (ref null $buf))
      (local $l0 (ref null $Row))
      (local $l1 f64)
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $putc (i32.const 93))
      (local.set $l0 (call $row (i32.const 3) (i32.const 0) (call $mem_str (i32.const 2092) (i32.const 4)) (call $mem_str (i32.const 2096) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $bud)
      (if (global.get $ERRED) (then (return)))
      (local.set $l1 (call $r0_0 (f64.const 20.0)))
      (if (i32.or (global.get $ERRED) (call $stop (i32.const 0))) (then (return)))
      (struct.set $S0 0 (global.get $S0) (local.get $l1))
      (local.set $ob (call $fmt_begin))
      (call $put_jn (struct.get $S0 0 (global.get $S0)))
      (drop (call $row (i32.const 5) (i32.const 0) (call $mem_str (i32.const 2114) (i32.const 6)) (call $mem_str (i32.const 2120) (i32.const 26)) (ref.null $str) (call $fmt_end (local.get $ob))))
      (drop (call $row (i32.const 9) (i32.const 0) (ref.null $str) (call $mem_str (i32.const 2146) (i32.const 26)) (ref.null $str) (ref.null $str)))
      (call $finish (i32.const 0))
      (return)
    )
    (func $run0_1
      (call $r0_1))
    ;; circle 0: Fib
    (global $S0 (mut (ref $S0)) (struct.new $S0 (f64.const 0)))
    (global $P0 (mut (ref $S0)) (struct.new $S0 (f64.const 0)))
    (func $init0 (global.set $S0 (struct.new $S0 (f64.const 0.0))))
    (func $publish0
      (struct.set $S0 0 (global.get $P0) (struct.get $S0 0 (global.get $S0)))
    )
    (func $pub0
      (call $pub_comma)
      (call $puts (i32.const 2172) (i32.const 13))
      (call $put_jn (struct.get $S0 0 (global.get $P0)))
    )
    (func $dump0
      (call $putc (i32.const 123))
      (call $puts (i32.const 2185) (i32.const 9))
      (call $put_jn (struct.get $S0 0 (global.get $S0)))
      (call $putc (i32.const 125)))
    (func $pdump0
      (call $putc (i32.const 123))
      (call $puts (i32.const 2185) (i32.const 9))
      (call $put_jn (struct.get $S0 0 (global.get $P0)))
      (call $putc (i32.const 125)))
    (func $restore0 (param $v (ref null $J))
      (local $x0 f64)
      (local.set $x0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2114) (i32.const 6))))
      (if (global.get $RD_OK) (then (struct.set $S0 0 (global.get $S0) (local.get $x0))))
    )
    (func $prestore0 (param $v (ref null $J))
      (local $x0 f64)
      (local.set $x0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2114) (i32.const 6))))
      (if (global.get $RD_OK) (then (struct.set $S0 0 (global.get $P0) (local.get $x0))))
    )
    (func $guards0
      (local $ob (ref null $buf))
    )
    (func $prog_flow (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_nchildren (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_child (param $i i32) (param $k i32) (result i32)
      (i32.const -1))
    (func $prog_exit (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_init (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $init0) (return)))
      )
    (func $prog_publish (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $publish0) (return)))
      )
    (func $prog_has_outs (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_pub (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $pub0) (return)))
      )
    (func $prog_core (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $run0_1) (return)))
      )
    (func $prog_name (param $i i32) (result (ref $str))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $mem_str (i32.const 2194) (i32.const 3)))))
      (call $str_empty))
    (func $prog_find (param $s (ref null $str)) (result i32)
      (if (call $str_eq_mem (local.get $s) (i32.const 2194) (i32.const 3)) (then (return (i32.const 0))))
      (i32.const -1))
    (func $prog_has_on (param $i i32) (param $kind i32) (result i32)
      (i32.const 0))
    (func $prog_on_key (param $i i32) (param $k i32)
      )
    (func $prog_on_pointer (param $i i32) (param $k i32)
      )
    (func $prog_on_tick (param $i i32)
      )
    (func $prog_on_exit (param $i i32)
      )
    (func $prog_deliver (param $i i32) (param $m (ref null $Msg))
      )
    (func $prog_reply (param $i i32) (param $id f64) (param $text (ref $str))
      )
    (func $prog_resume (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_until (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_dump (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $dump0) (return)))
      )
    (func $prog_pdump (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $pdump0) (return)))
      )
    (func $prog_restore (param $i i32) (param $v (ref null $J))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $restore0 (local.get $v)) (return)))
      )
    (func $prog_prestore (param $i i32) (param $v (ref null $J))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $prestore0 (local.get $v)) (return)))
      )
    (func $prog_guards (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $guards0) (return)))
      )
    (global $ROOT i32 (i32.const 0))
    (global $N i32 (i32.const 1))
    (global $FPS f64 (f64.const 60.0))
    (global $DEBUG i32 (i32.const 1))
    (data (i32.const 2048) "\22x\22:")
    (data (i32.const 2052) ",\22y\22:")
    (data (i32.const 2057) ",\22down\22:")
    (data (i32.const 2065) "x")
    (data (i32.const 2066) "y")
    (data (i32.const 2067) "down")
    (data (i32.const 2071) "fib")
    (data (i32.const 2074) "/circles/0/rites/0")
    (data (i32.const 2092) "main")
    (data (i32.const 2096) "/circles/0/rites/1")
    (data (i32.const 2114) "answer")
    (data (i32.const 2120) "/circles/0/rites/1/steps/0")
    (data (i32.const 2146) "/circles/0/rites/1/steps/1")
    (data (i32.const 2172) "\22Fib.answer\22:")
    (data (i32.const 2185) "\22answer\22:")
    (data (i32.const 2194) "Fib")
    (global $in_base i32 (i32.const 2208))
    (memory (export "memory") 3)
  
  '''
# ---
# name: test_program_snapshot[debug-paddle]
  '''
    (rec
      (type $F1 (struct (field (mut f64)) (field (mut f64)) (field (mut f64)) (field (mut f64))))  ;; form Ball
      (type $S0 (struct))
      (type $S1 (struct (field (mut (ref $F1))) (field (mut f64)) (field (mut f64))))
      (type $S2 (struct (field (mut i32))))
    )
    (func $jf0 (param $v (ref null $F0))  ;; Pointer
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F0 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F0 1 (local.get $v)))
      (call $puts (i32.const 2057) (i32.const 8))
      (call $put_bool (struct.get $F0 2 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $jr0 (param $v (ref null $J)) (result (ref null $F0))  ;; Pointer
      (local $f0 f64) (local $f1 f64) (local $f2 i32)
      (if (i32.eqz (call $rd_rec (local.get $v))) (then (global.set $RD_OK (i32.const 0)) (return (ref.null $F0))))
      (local.set $f0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2065) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (local.set $f1 (call $rd_n (call $j_getk (local.get $v) (i32.const 2066) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (local.set $f2 (call $rd_b (call $j_getk (local.get $v) (i32.const 2067) (i32.const 4))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F0))))
      (global.set $RD_OK (i32.const 1))
      (struct.new $F0 (local.get $f0) (local.get $f1) (local.get $f2)))
    (func $jf1 (param $v (ref null $F1))  ;; Ball
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F1 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F1 1 (local.get $v)))
      (call $puts (i32.const 2071) (i32.const 6))
      (call $put_jn (struct.get $F1 2 (local.get $v)))
      (call $puts (i32.const 2077) (i32.const 6))
      (call $put_jn (struct.get $F1 3 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $jr1 (param $v (ref null $J)) (result (ref null $F1))  ;; Ball
      (local $f0 f64) (local $f1 f64) (local $f2 f64) (local $f3 f64)
      (if (i32.eqz (call $rd_rec (local.get $v))) (then (global.set $RD_OK (i32.const 0)) (return (ref.null $F1))))
      (local.set $f0 (call $rd_n (call $j_getk (local.get $v) (i32.const 2065) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F1))))
      (local.set $f1 (call $rd_n (call $j_getk (local.get $v) (i32.const 2066) (i32.const 1))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F1))))
      (local.set $f2 (call $rd_n (call $j_getk (local.get $v) (i32.const 2083) (i32.const 2))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F1))))
      (local.set $f3 (call $rd_n (call $j_getk (local.get $v) (i32.const 2085) (i32.const 2))))
      (if (i32.eqz (global.get $RD_OK)) (then (return (ref.null $F1))))
      (global.set $RD_OK (i32.const 1))
      (struct.new $F1 (local.get $f0) (local.get $f1) (local.get $f2) (local.get $f3)))
    (func $r1_0 ;; Play.begin
      (local $ob (ref null $buf))
      (local $l0 (ref null $Row))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $putc (i32.const 93))
      (local.set $l0 (call $row (i32.const 3) (i32.const 1) (call $mem_str (i32.const 2087) (i32.const 5)) (call $mem_str (i32.const 2092) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (struct.set $S1 2 (global.get $S1) (f64.const 0.0))
      (local.set $ob (call $fmt_begin))
      (call $put_jn (struct.get $S1 2 (global.get $S1)))
      (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2110) (i32.const 5)) (call $mem_str (i32.const 2115) (i32.const 26)) (ref.null $str) (call $fmt_end (local.get $ob))))
      (call $bud)
      (if (global.get $ERRED) (then (return)))
      (call $r1_1)
      (if (i32.or (global.get $ERRED) (call $stop (i32.const 1))) (then (return)))
    )
    (func $run1_0
      (call $r1_0))
    (func $r1_1 ;; Play.serve
      (local $ob (ref null $buf))
      (local $l0 (ref null $Row))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $putc (i32.const 93))
      (local.set $l0 (call $row (i32.const 3) (i32.const 1) (call $mem_str (i32.const 2141) (i32.const 5)) (call $mem_str (i32.const 2146) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (struct.set $S1 0 (global.get $S1) (struct.new $F1 (f64.const 160.0) (f64.const 40.0) (f64.const 90.0) (f64.const 70.0)))
      (local.set $ob (call $fmt_begin))
      (call $jf1 (struct.get $S1 0 (global.get $S1)))
      (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2164) (i32.const 4)) (call $mem_str (i32.const 2168) (i32.const 26)) (ref.null $str) (call $fmt_end (local.get $ob))))
    )
    (func $run1_1
      (call $r1_1))
    (func $r1_2 (param $l0 f64) ;; Play.step
      (local $ob (ref null $buf))
      (local $l1 (ref null $Row))
      (local $l2 f64)
      (local $l3 f64)
      (local $l4 (ref null $Row))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_jn (local.get $l0))
      (call $putc (i32.const 93))
      (local.set $l1 (call $row (i32.const 3) (i32.const 1) (call $mem_str (i32.const 2194) (i32.const 4)) (call $mem_str (i32.const 2198) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (if (call $h_input_key (array.new_data $str $L0 (i32.const 0) (i32.const 9)))
        (then
          (struct.set $S1 1 (global.get $S1) (call $f_max (f64.const 0.0) (f64.sub (struct.get $S1 1 (global.get $S1)) (f64.mul (f64.const 180.0) (local.get $l0)))))
          (local.set $ob (call $fmt_begin))
          (call $put_jn (struct.get $S1 1 (global.get $S1)))
          (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2216) (i32.const 6)) (call $mem_str (i32.const 2222) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
        )
      )
      (if (call $h_input_key (array.new_data $str $L1 (i32.const 0) (i32.const 10)))
        (then
          (struct.set $S1 1 (global.get $S1) (call $f_min (f64.const 280.0) (f64.add (struct.get $S1 1 (global.get $S1)) (f64.mul (f64.const 180.0) (local.get $l0)))))
          (local.set $ob (call $fmt_begin))
          (call $put_jn (struct.get $S1 1 (global.get $S1)))
          (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2216) (i32.const 6)) (call $mem_str (i32.const 2255) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
        )
      )
      (struct.set $F1 0 (struct.get $S1 0 (global.get $S1)) (f64.add (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.mul (struct.get $F1 2 (struct.get $S1 0 (global.get $S1))) (local.get $l0))))
      (local.set $ob (call $fmt_begin))
      (call $jf1 (struct.get $S1 0 (global.get $S1)))
      (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2164) (i32.const 4)) (call $mem_str (i32.const 2288) (i32.const 26)) (ref.null $str) (call $fmt_end (local.get $ob))))
      (struct.set $F1 1 (struct.get $S1 0 (global.get $S1)) (f64.add (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.mul (struct.get $F1 3 (struct.get $S1 0 (global.get $S1))) (local.get $l0))))
      (local.set $ob (call $fmt_begin))
      (call $jf1 (struct.get $S1 0 (global.get $S1)))
      (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2164) (i32.const 4)) (call $mem_str (i32.const 2314) (i32.const 26)) (ref.null $str) (call $fmt_end (local.get $ob))))
      (if (if (result i32) (f64.lt (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.const 0.0)) (then (i32.const 1)) (else (f64.gt (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.const 320.0))))
        (then
          (struct.set $F1 2 (struct.get $S1 0 (global.get $S1)) (f64.neg (struct.get $F1 2 (struct.get $S1 0 (global.get $S1)))))
          (local.set $ob (call $fmt_begin))
          (call $jf1 (struct.get $S1 0 (global.get $S1)))
          (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2164) (i32.const 4)) (call $mem_str (i32.const 2340) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
        )
      )
      (if (f64.lt (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.const 0.0))
        (then
          (struct.set $F1 3 (struct.get $S1 0 (global.get $S1)) (f64.neg (struct.get $F1 3 (struct.get $S1 0 (global.get $S1)))))
          (local.set $ob (call $fmt_begin))
          (call $jf1 (struct.get $S1 0 (global.get $S1)))
          (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2164) (i32.const 4)) (call $mem_str (i32.const 2373) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
        )
      )
      (if (if (result i32) (if (result i32) (f64.gt (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.const 170.0)) (then (f64.ge (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (struct.get $S1 1 (global.get $S1)))) (else (i32.const 0))) (then (f64.le (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.add (struct.get $S1 1 (global.get $S1)) (f64.const 40.0)))) (else (i32.const 0)))
        (then
          (struct.set $F1 3 (struct.get $S1 0 (global.get $S1)) (f64.mul (f64.neg (call $f_abs (struct.get $F1 3 (struct.get $S1 0 (global.get $S1))))) (f64.const 1.05)))
          (local.set $ob (call $fmt_begin))
          (call $jf1 (struct.get $S1 0 (global.get $S1)))
          (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2164) (i32.const 4)) (call $mem_str (i32.const 2406) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
          (struct.set $S1 2 (global.get $S1) (f64.add (struct.get $S1 2 (global.get $S1)) (f64.const 1.0)))
          (local.set $ob (call $fmt_begin))
          (call $put_jn (struct.get $S1 2 (global.get $S1)))
          (drop (call $row (i32.const 5) (i32.const 1) (call $mem_str (i32.const 2110) (i32.const 5)) (call $mem_str (i32.const 2439) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
          (local.set $l2 (f64.const 440.0))
          (local.set $l3 (f64.const 50.0))
          (local.set $ob (call $fmt_begin))
          (call $putc (i32.const 91))
          (call $put_jn (local.get $l2))
          (call $putc (i32.const 44))
          (call $put_jn (local.get $l3))
          (call $putc (i32.const 93))
          (local.set $l4 (call $row (i32.const 4) (i32.const 1) (call $mem_str (i32.const 2472) (i32.const 10)) (call $mem_str (i32.const 2482) (i32.const 33)) (call $fmt_end (local.get $ob)) (ref.null $str)))
          (call $h_audio_tone (local.get $l2) (local.get $l3))
          (if (global.get $ERRED) (then (return)))
        )
      )
      (if (f64.gt (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.const 180.0))
        (then
          (drop (call $row (i32.const 9) (i32.const 1) (ref.null $str) (call $mem_str (i32.const 2515) (i32.const 33)) (ref.null $str) (ref.null $str)))
          (call $finish (i32.const 1))
          (return)
        )
      )
      (call $bud)
      (if (global.get $ERRED) (then (return)))
      (call $r1_3)
      (if (i32.or (global.get $ERRED) (call $stop (i32.const 1))) (then (return)))
    )
    (func $run1_2 (param $l0 f64)
      (call $r1_2 (local.get $l0)))
    (func $r1_3 ;; Play.paint
      (local $ob (ref null $buf))
      (local $l0 (ref null $Row))
      (local $l1 (ref null $str))
      (local $l2 (ref null $Row))
      (local $l3 (ref null $str))
      (local $l4 (ref null $Row))
      (local $l5 f64)
      (local $l6 f64)
      (local $l7 f64)
      (local $l8 f64)
      (local $l9 (ref null $Row))
      (local $l10 f64)
      (local $l11 f64)
      (local $l12 f64)
      (local $l13 (ref null $Row))
      (local $l14 (ref null $str))
      (local $l15 f64)
      (local $l16 f64)
      (local $l17 (ref null $Row))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $putc (i32.const 93))
      (local.set $l0 (call $row (i32.const 3) (i32.const 1) (call $mem_str (i32.const 2548) (i32.const 5)) (call $mem_str (i32.const 2553) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (local.set $l1 (array.new_data $str $L2 (i32.const 0) (i32.const 4)))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l1)))
      (call $putc (i32.const 93))
      (local.set $l2 (call $row (i32.const 4) (i32.const 1) (call $mem_str (i32.const 2571) (i32.const 12)) (call $mem_str (i32.const 2583) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_clear (ref.as_non_null (local.get $l1)))
      (if (global.get $ERRED) (then (return)))
      (local.set $l3 (array.new_data $str $L3 (i32.const 0) (i32.const 4)))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l3)))
      (call $putc (i32.const 93))
      (local.set $l4 (call $row (i32.const 4) (i32.const 1) (call $mem_str (i32.const 2609) (i32.const 10)) (call $mem_str (i32.const 2619) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_ink (ref.as_non_null (local.get $l3)))
      (if (global.get $ERRED) (then (return)))
      (local.set $l5 (struct.get $S1 1 (global.get $S1)))
      (local.set $l6 (f64.const 172.0))
      (local.set $l7 (f64.const 40.0))
      (local.set $l8 (f64.const 4.0))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_jn (local.get $l5))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l6))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l7))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l8))
      (call $putc (i32.const 93))
      (local.set $l9 (call $row (i32.const 4) (i32.const 1) (call $mem_str (i32.const 2645) (i32.const 11)) (call $mem_str (i32.const 2656) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_rect (local.get $l5) (local.get $l6) (local.get $l7) (local.get $l8))
      (if (global.get $ERRED) (then (return)))
      (local.set $l10 (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))))
      (local.set $l11 (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))))
      (local.set $l12 (f64.const 3.0))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_jn (local.get $l10))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l11))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l12))
      (call $putc (i32.const 93))
      (local.set $l13 (call $row (i32.const 4) (i32.const 1) (call $mem_str (i32.const 2682) (i32.const 13)) (call $mem_str (i32.const 2695) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_circle (local.get $l10) (local.get $l11) (local.get $l12))
      (if (global.get $ERRED) (then (return)))
      (local.set $l14 (call $str_cat (array.new_data $str $L4 (i32.const 0) (i32.const 6)) (call $f_str (struct.get $S1 2 (global.get $S1)))))
      (local.set $l15 (f64.const 4.0))
      (local.set $l16 (f64.const 4.0))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l14)))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l15))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l16))
      (call $putc (i32.const 93))
      (local.set $l17 (call $row (i32.const 4) (i32.const 1) (call $mem_str (i32.const 2721) (i32.const 11)) (call $mem_str (i32.const 2732) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_text (ref.as_non_null (local.get $l14)) (local.get $l15) (local.get $l16))
      (if (global.get $ERRED) (then (return)))
    )
    (func $run1_3
      (call $r1_3))
    (func $r2_0w (param $fr (ref $W2_0)) (result i32) ;; Result.show（wait を含む）
      (local $rs i32) (local $ob (ref null $buf))
      (local.set $rs (i32.ne (struct.get $W2_0 0 (local.get $fr)) (i32.const 0)))
      (if (i32.eqz (local.get $rs))
        (then
        (local.set $ob (call $fmt_begin))
        (call $putc (i32.const 91))
        (call $putc (i32.const 93))
        (struct.set $W2_0 1 (local.get $fr) (call $row (i32.const 3) (i32.const 2) (call $mem_str (i32.const 2758) (i32.const 4)) (call $mem_str (i32.const 2762) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
        ))
      (if (i32.eqz (local.get $rs))
        (then
          (struct.set $S2 0 (global.get $S2) (i32.const 0))
          (local.set $ob (call $fmt_begin))
          (call $put_bool (struct.get $S2 0 (global.get $S2)))
          (drop (call $row (i32.const 5) (i32.const 2) (call $mem_str (i32.const 2780) (i32.const 4)) (call $mem_str (i32.const 2784) (i32.const 26)) (ref.null $str) (call $fmt_end (local.get $ob))))
        ))
      (if (local.get $rs)
        (then (if (i32.eq (struct.get $W2_0 0 (local.get $fr)) (i32.const 1)) (then (local.set $rs (i32.const 0)))))
        (else
          (global.set $WREQ_KIND (i32.const 1))
          (global.set $WREQ_TICKS (call $wait_ticks_of (f64.const 20.0)))
          (global.set $WREQ_PTR (call $mem_str (i32.const 2810) (i32.const 26)))
          (global.set $WREQ_TOP (local.get $fr))
          (struct.set $W2_0 0 (local.get $fr) (i32.const 1))
          (return (i32.const 1))))
      (i32.const 0))
    (func $run2_0
      (local $fr (ref null $W2_0))
      (local.set $fr (struct.new_default $W2_0))
      (if (call $r2_0w (ref.as_non_null (local.get $fr))) (then (call $register_wait (i32.const 2) (i32.const 0) (local.get $fr)))))
    (func $r2_1 ;; Result.menu
      (local $ob (ref null $buf))
      (local $l0 (ref null $Row))
      (local $l1 (ref null $str))
      (local $l2 (ref null $Row))
      (local $l3 (ref null $str))
      (local $l4 f64)
      (local $l5 f64)
      (local $l6 (ref null $Row))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $putc (i32.const 93))
      (local.set $l0 (call $row (i32.const 3) (i32.const 2) (call $mem_str (i32.const 2836) (i32.const 4)) (call $mem_str (i32.const 2840) (i32.const 18)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (local.set $l1 (array.new_data $str $L2 (i32.const 0) (i32.const 4)))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l1)))
      (call $putc (i32.const 93))
      (local.set $l2 (call $row (i32.const 4) (i32.const 2) (call $mem_str (i32.const 2571) (i32.const 12)) (call $mem_str (i32.const 2858) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_clear (ref.as_non_null (local.get $l1)))
      (if (global.get $ERRED) (then (return)))
      (local.set $l3 (call $str_cat (array.new_data $str $L4 (i32.const 0) (i32.const 6)) (call $f_str (struct.get $S1 2 (global.get $P1)))))
      (local.set $l4 (f64.const 120.0))
      (local.set $l5 (f64.const 60.0))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_js (ref.as_non_null (local.get $l3)))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l4))
      (call $putc (i32.const 44))
      (call $put_jn (local.get $l5))
      (call $putc (i32.const 93))
      (local.set $l6 (call $row (i32.const 4) (i32.const 2) (call $mem_str (i32.const 2721) (i32.const 11)) (call $mem_str (i32.const 2884) (i32.const 26)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $h_canvas_text (ref.as_non_null (local.get $l3)) (local.get $l4) (local.get $l5))
      (if (global.get $ERRED) (then (return)))
      (if (call $h_ui_button (array.new_data $str $L5 (i32.const 0) (i32.const 5)) (f64.const 120.0) (f64.const 100.0) (f64.const 80.0) (f64.const 24.0))
        (then
          (drop (call $row (i32.const 9) (i32.const 2) (ref.null $str) (call $mem_str (i32.const 2910) (i32.const 33)) (ref.null $str) (ref.null $str)))
          (call $finish (i32.const 2))
          (return)
        )
      )
      (if (call $h_ui_button (array.new_data $str $L6 (i32.const 0) (i32.const 4)) (f64.const 120.0) (f64.const 130.0) (f64.const 80.0) (f64.const 24.0))
        (then
          (struct.set $S2 0 (global.get $S2) (i32.const 1))
          (local.set $ob (call $fmt_begin))
          (call $put_bool (struct.get $S2 0 (global.get $S2)))
          (drop (call $row (i32.const 5) (i32.const 2) (call $mem_str (i32.const 2780) (i32.const 4)) (call $mem_str (i32.const 2943) (i32.const 33)) (ref.null $str) (call $fmt_end (local.get $ob))))
          (drop (call $row (i32.const 9) (i32.const 2) (ref.null $str) (call $mem_str (i32.const 2976) (i32.const 33)) (ref.null $str) (ref.null $str)))
          (call $finish (i32.const 2))
          (return)
        )
      )
    )
    (func $run2_1
      (call $r2_1))
    ;; circle 0: Game
    (func $init0)
    (func $publish0)
    (func $pub0)
    (func $dump0)
    (func $pdump0)
    (func $restore0 (param $v (ref null $J)))
    (func $prestore0 (param $v (ref null $J)))
    (func $exit0 (result i32) (struct.get $S2 0 (global.get $P2)))
    ;; circle 1: Play
    (global $S1 (mut (ref $S1)) (struct.new $S1 (struct.new $F1 (f64.const 0) (f64.const 0) (f64.const 0) (f64.const 0)) (f64.const 0) (f64.const 0)))
    (global $P1 (mut (ref $S1)) (struct.new $S1 (struct.new $F1 (f64.const 0) (f64.const 0) (f64.const 0) (f64.const 0)) (f64.const 0) (f64.const 0)))
    (func $init1 (global.set $S1 (struct.new $S1 (struct.new $F1 (f64.const 160.0) (f64.const 40.0) (f64.const 90.0) (f64.const 70.0)) (f64.const 140.0) (f64.const 0.0))))
    (func $publish1
      (struct.set $S1 2 (global.get $P1) (struct.get $S1 2 (global.get $S1)))
    )
    (func $pub1
      (call $pub_comma)
      (call $puts (i32.const 3009) (i32.const 13))
      (call $put_jn (struct.get $S1 2 (global.get $P1)))
    )
    (func $dump1
      (call $putc (i32.const 123))
      (call $puts (i32.const 3022) (i32.const 7))
      (call $jf1 (struct.get $S1 0 (global.get $S1)))
      (call $puts (i32.const 3029) (i32.const 10))
      (call $put_jn (struct.get $S1 1 (global.get $S1)))
      (call $puts (i32.const 3039) (i32.const 9))
      (call $put_jn (struct.get $S1 2 (global.get $S1)))
      (call $putc (i32.const 125)))
    (func $pdump1
      (call $putc (i32.const 123))
      (call $puts (i32.const 3048) (i32.const 8))
      (call $put_jn (struct.get $S1 2 (global.get $P1)))
      (call $putc (i32.const 125)))
    (func $restore1 (param $v (ref null $J))
      (local $x0 (ref null $F1))
      (local $x1 f64)
      (local $x2 f64)
      (local.set $x0 (call $jr1 (call $j_getk (local.get $v) (i32.const 2164) (i32.const 4))))
      (if (global.get $RD_OK) (then (struct.set $S1 0 (global.get $S1) (ref.as_non_null (local.get $x0)))))
      (local.set $x1 (call $rd_n (call $j_getk (local.get $v) (i32.const 2216) (i32.const 6))))
      (if (global.get $RD_OK) (then (struct.set $S1 1 (global.get $S1) (local.get $x1))))
      (local.set $x2 (call $rd_n (call $j_getk (local.get $v) (i32.const 2110) (i32.const 5))))
      (if (global.get $RD_OK) (then (struct.set $S1 2 (global.get $S1) (local.get $x2))))
    )
    (func $prestore1 (param $v (ref null $J))
      (local $x2 f64)
      (local.set $x2 (call $rd_n (call $j_getk (local.get $v) (i32.const 2110) (i32.const 5))))
      (if (global.get $RD_OK) (then (struct.set $S1 2 (global.get $P1) (local.get $x2))))
    )
    (func $guards1
      (local $ob (ref null $buf))
      (local.set $ob (call $fmt_begin))
      (call $put_js (call $mem_str (i32.const 3056) (i32.const 27)))
      (if (i32.eqz (f64.ge (struct.get $S1 2 (global.get $S1)) (f64.const 0.0))) (then (drop (call $row (i32.const 10) (i32.const 1) (ref.null $str) (call $mem_str (i32.const 3083) (i32.const 28)) (ref.null $str) (call $fmt_end (local.get $ob))))))
    )
    (func $on_tick1
      (local $ob (ref null $buf))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_jn (f64.div (f64.const 1) (global.get $FPS)))
      (call $putc (i32.const 93))
      (drop (call $row (i32.const 2) (i32.const 1) (call $mem_str (i32.const 3135) (i32.const 4)) (call $mem_str (i32.const 3111) (i32.const 24)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $run1_2 (f64.div (f64.const 1) (global.get $FPS))))
    ;; circle 2: Result
    (global $S2 (mut (ref $S2)) (struct.new $S2 (i32.const 0)))
    (global $P2 (mut (ref $S2)) (struct.new $S2 (i32.const 0)))
    (func $init2 (global.set $S2 (struct.new $S2 (i32.const 0))))
    (func $publish2
      (struct.set $S2 0 (global.get $P2) (struct.get $S2 0 (global.get $S2)))
    )
    (func $pub2
      (call $pub_comma)
      (call $puts (i32.const 3139) (i32.const 14))
      (call $put_bool (struct.get $S2 0 (global.get $P2)))
    )
    (func $dump2
      (call $putc (i32.const 123))
      (call $puts (i32.const 3153) (i32.const 7))
      (call $put_bool (struct.get $S2 0 (global.get $S2)))
      (call $putc (i32.const 125)))
    (func $pdump2
      (call $putc (i32.const 123))
      (call $puts (i32.const 3153) (i32.const 7))
      (call $put_bool (struct.get $S2 0 (global.get $P2)))
      (call $putc (i32.const 125)))
    (func $restore2 (param $v (ref null $J))
      (local $x0 i32)
      (local.set $x0 (call $rd_b (call $j_getk (local.get $v) (i32.const 2780) (i32.const 4))))
      (if (global.get $RD_OK) (then (struct.set $S2 0 (global.get $S2) (local.get $x0))))
    )
    (func $prestore2 (param $v (ref null $J))
      (local $x0 i32)
      (local.set $x0 (call $rd_b (call $j_getk (local.get $v) (i32.const 2780) (i32.const 4))))
      (if (global.get $RD_OK) (then (struct.set $S2 0 (global.get $P2) (local.get $x0))))
    )
    (func $guards2
      (local $ob (ref null $buf))
    )
    (func $on_tick2
      (local $ob (ref null $buf))
      (local.set $ob (call $fmt_begin))
      (call $putc (i32.const 91))
      (call $put_jn (f64.div (f64.const 1) (global.get $FPS)))
      (call $putc (i32.const 93))
      (drop (call $row (i32.const 2) (i32.const 2) (call $mem_str (i32.const 3135) (i32.const 4)) (call $mem_str (i32.const 3160) (i32.const 24)) (call $fmt_end (local.get $ob)) (ref.null $str)))
      (call $run2_1))
    (func $prog_flow (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 3))))
      (i32.const 0))
    (func $prog_nchildren (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 2))))
      (i32.const 0))
    (func $prog_child (param $i i32) (param $k i32) (result i32)
      (if (i32.and (i32.eq (local.get $i) (i32.const 0)) (i32.eq (local.get $k) (i32.const 0))) (then (return (i32.const 1))))
      (if (i32.and (i32.eq (local.get $i) (i32.const 0)) (i32.eq (local.get $k) (i32.const 1))) (then (return (i32.const 2))))
      (i32.const -1))
    (func $prog_exit (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $exit0))))
      (i32.const 0))
    (func $prog_init (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $init1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $init2) (return)))
      )
    (func $prog_publish (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $publish1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $publish2) (return)))
      )
    (func $prog_has_outs (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (return (i32.const 1))))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_pub (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $pub1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $pub2) (return)))
      )
    (func $prog_core (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $run1_0) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $run2_0) (return)))
      )
    (func $prog_name (param $i i32) (result (ref $str))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $mem_str (i32.const 3184) (i32.const 4)))))
      (if (i32.eq (local.get $i) (i32.const 1)) (then (return (call $mem_str (i32.const 3188) (i32.const 4)))))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (return (call $mem_str (i32.const 3192) (i32.const 6)))))
      (call $str_empty))
    (func $prog_find (param $s (ref null $str)) (result i32)
      (if (call $str_eq_mem (local.get $s) (i32.const 3184) (i32.const 4)) (then (return (i32.const 0))))
      (if (call $str_eq_mem (local.get $s) (i32.const 3188) (i32.const 4)) (then (return (i32.const 1))))
      (if (call $str_eq_mem (local.get $s) (i32.const 3192) (i32.const 6)) (then (return (i32.const 2))))
      (i32.const -1))
    (func $prog_has_on (param $i i32) (param $kind i32) (result i32)
      (if (i32.and (i32.eq (local.get $i) (i32.const 1)) (i32.eq (local.get $kind) (i32.const 3))) (then (return (i32.const 1))))
      (if (i32.and (i32.eq (local.get $i) (i32.const 2)) (i32.eq (local.get $kind) (i32.const 3))) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_on_key (param $i i32) (param $k i32)
      )
    (func $prog_on_pointer (param $i i32) (param $k i32)
      )
    (func $prog_on_tick (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $on_tick1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $on_tick2) (return)))
      )
    (func $prog_on_exit (param $i i32)
      )
    (func $prog_deliver (param $i i32) (param $m (ref null $Msg))
      )
    (func $prog_reply (param $i i32) (param $id f64) (param $text (ref $str))
      )
    (func $prog_resume (param $i i32) (param $fr anyref) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $r2_0w (ref.cast (ref $W2_0) (local.get $fr))))))
      (i32.const 0))
    (func $prog_until (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_dump (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $dump1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $dump2) (return)))
      )
    (func $prog_pdump (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $pdump1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $pdump2) (return)))
      )
    (func $prog_restore (param $i i32) (param $v (ref null $J))
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $restore1 (local.get $v)) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $restore2 (local.get $v)) (return)))
      )
    (func $prog_prestore (param $i i32) (param $v (ref null $J))
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $prestore1 (local.get $v)) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $prestore2 (local.get $v)) (return)))
      )
    (func $prog_guards (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $guards1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $guards2) (return)))
      )
    (global $ROOT i32 (i32.const 0))
    (global $N i32 (i32.const 3))
    (global $FPS f64 (f64.const 60.0))
    (global $DEBUG i32 (i32.const 1))
    (rec
      (type $W2_0 (struct (field (mut i32)) (field (mut (ref null $Row)))))  ;; Result.show
    )
    (data $L0 "ArrowLeft")
    (data $L1 "ArrowRight")
    (data $L2 "#000")
    (data $L3 "#fff")
    (data $L4 "SCORE ")
    (data $L5 "RETRY")
    (data $L6 "QUIT")
    (data (i32.const 2048) "\22x\22:")
    (data (i32.const 2052) ",\22y\22:")
    (data (i32.const 2057) ",\22down\22:")
    (data (i32.const 2065) "x")
    (data (i32.const 2066) "y")
    (data (i32.const 2067) "down")
    (data (i32.const 2071) ",\22vx\22:")
    (data (i32.const 2077) ",\22vy\22:")
    (data (i32.const 2083) "vx")
    (data (i32.const 2085) "vy")
    (data (i32.const 2087) "begin")
    (data (i32.const 2092) "/circles/1/rites/0")
    (data (i32.const 2110) "score")
    (data (i32.const 2115) "/circles/1/rites/0/steps/0")
    (data (i32.const 2141) "serve")
    (data (i32.const 2146) "/circles/1/rites/1")
    (data (i32.const 2164) "ball")
    (data (i32.const 2168) "/circles/1/rites/1/steps/0")
    (data (i32.const 2194) "step")
    (data (i32.const 2198) "/circles/1/rites/2")
    (data (i32.const 2216) "paddle")
    (data (i32.const 2222) "/circles/1/rites/2/steps/0/then/0")
    (data (i32.const 2255) "/circles/1/rites/2/steps/1/then/0")
    (data (i32.const 2288) "/circles/1/rites/2/steps/2")
    (data (i32.const 2314) "/circles/1/rites/2/steps/3")
    (data (i32.const 2340) "/circles/1/rites/2/steps/4/then/0")
    (data (i32.const 2373) "/circles/1/rites/2/steps/5/then/0")
    (data (i32.const 2406) "/circles/1/rites/2/steps/6/then/0")
    (data (i32.const 2439) "/circles/1/rites/2/steps/6/then/1")
    (data (i32.const 2472) "audio.tone")
    (data (i32.const 2482) "/circles/1/rites/2/steps/6/then/2")
    (data (i32.const 2515) "/circles/1/rites/2/steps/7/then/0")
    (data (i32.const 2548) "paint")
    (data (i32.const 2553) "/circles/1/rites/3")
    (data (i32.const 2571) "canvas.clear")
    (data (i32.const 2583) "/circles/1/rites/3/steps/0")
    (data (i32.const 2609) "canvas.ink")
    (data (i32.const 2619) "/circles/1/rites/3/steps/1")
    (data (i32.const 2645) "canvas.rect")
    (data (i32.const 2656) "/circles/1/rites/3/steps/2")
    (data (i32.const 2682) "canvas.circle")
    (data (i32.const 2695) "/circles/1/rites/3/steps/3")
    (data (i32.const 2721) "canvas.text")
    (data (i32.const 2732) "/circles/1/rites/3/steps/4")
    (data (i32.const 2758) "show")
    (data (i32.const 2762) "/circles/2/rites/0")
    (data (i32.const 2780) "quit")
    (data (i32.const 2784) "/circles/2/rites/0/steps/0")
    (data (i32.const 2810) "/circles/2/rites/0/steps/1")
    (data (i32.const 2836) "menu")
    (data (i32.const 2840) "/circles/2/rites/1")
    (data (i32.const 2858) "/circles/2/rites/1/steps/0")
    (data (i32.const 2884) "/circles/2/rites/1/steps/1")
    (data (i32.const 2910) "/circles/2/rites/1/steps/2/then/0")
    (data (i32.const 2943) "/circles/2/rites/1/steps/3/then/0")
    (data (i32.const 2976) "/circles/2/rites/1/steps/3/then/1")
    (data (i32.const 3009) "\22Play.score\22:")
    (data (i32.const 3022) "\22ball\22:")
    (data (i32.const 3029) ",\22paddle\22:")
    (data (i32.const 3039) ",\22score\22:")
    (data (i32.const 3048) "\22score\22:")
    (data (i32.const 3056) "score \e3\81\af\e8\b2\a0\e3\81\ab\e3\81\aa\e3\82\89\e3\81\aa\e3\81\84")
    (data (i32.const 3083) "/circles/1/boundary/guards/0")
    (data (i32.const 3111) "/circles/1/boundary/on/0")
    (data (i32.const 3135) "tick")
    (data (i32.const 3139) "\22Result.quit\22:")
    (data (i32.const 3153) "\22quit\22:")
    (data (i32.const 3160) "/circles/2/boundary/on/0")
    (data (i32.const 3184) "Game")
    (data (i32.const 3188) "Play")
    (data (i32.const 3192) "Result")
    (global $in_base i32 (i32.const 3200))
    (memory (export "memory") 3)
  
  '''
# ---
# name: test_program_snapshot[release-clicker]
  '''
    (rec
      (type $S0 (struct (field (mut f64)) (field (mut f64)) (field (mut (ref $str)))))
    )
    (func $jf0 (param $v (ref null $F0))  ;; Pointer
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F0 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F0 1 (local.get $v)))
      (call $puts (i32.const 2057) (i32.const 8))
      (call $put_bool (struct.get $F0 2 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $r0_0w (param $fr (ref $W0_0)) (result i32) ;; Clicker.grow（wait を含む）
      (local $rs i32) (local $ob (ref null $buf))
      (local.set $rs (i32.ne (struct.get $W0_0 0 (local.get $fr)) (i32.const 0)))
      (if (i32.or (i32.eqz (local.get $rs)) (i32.and (i32.gt_s (struct.get $W0_0 0 (local.get $fr)) (i32.const 0)) (i32.le_s (struct.get $W0_0 0 (local.get $fr)) (i32.const 1))))
        (then
          (block $brk1
            (loop $loop2
              (if (i32.eqz (local.get $rs))
                (then
                  (br_if $brk1 (i32.eqz (i32.const 1)))
                ))
              (if (local.get $rs)
                (then (if (i32.eq (struct.get $W0_0 0 (local.get $fr)) (i32.const 1)) (then (local.set $rs (i32.const 0)))))
                (else
                  (global.set $WREQ_KIND (i32.const 1))
                  (global.set $WREQ_TICKS (call $wait_ticks_of (f64.const 60.0)))
                  (global.set $WREQ_PTR (call $mem_str (i32.const 2065) (i32.const 34)))
                  (global.set $WREQ_TOP (local.get $fr))
                  (struct.set $W0_0 0 (local.get $fr) (i32.const 1))
                  (return (i32.const 1))))
              (if (i32.eqz (local.get $rs))
                (then
                  (struct.set $S0 0 (global.get $S0) (f64.add (struct.get $S0 0 (global.get $S0)) (struct.get $S0 1 (global.get $S0))))
                  (if (f64.lt (call $h_random_next) (f64.const 0.1))
                    (then
                      (if (i32.eqz (local.get $rs))
                        (then
                          (struct.set $S0 2 (global.get $S0) (array.new_data $str $L0 (i32.const 0) (i32.const 9)))
                          (struct.set $S0 0 (global.get $S0) (f64.add (struct.get $S0 0 (global.get $S0)) (f64.const 10.0)))
                        ))
                    )
                    (else
                      (if (i32.eqz (local.get $rs))
                        (then
                          (struct.set $S0 2 (global.get $S0) (array.new_data $str $L1 (i32.const 0) (i32.const 0)))
                        ))
                    )
                  )
                ))
              (call $bud)
              (br_if $brk1 (global.get $ERRED))
              (br $loop2)
            )
          )
          (if (global.get $ERRED) (then (return (i32.const 0))))
        ))
      (i32.const 0))
    (func $run0_0
      (local $fr (ref null $W0_0))
      (local.set $fr (struct.new_default $W0_0))
      (if (call $r0_0w (ref.as_non_null (local.get $fr))) (then (call $register_wait (i32.const 0) (i32.const 0) (local.get $fr)))))
    (func $r0_1 ;; Clicker.screen
      (local $ob (ref null $buf))
      (call $h_canvas_clear (array.new_data $str $L2 (i32.const 0) (i32.const 4)))
      (if (global.get $ERRED) (then (return)))
      (call $h_ui_label (call $str_cat (array.new_data $str $L3 (i32.const 0) (i32.const 8)) (call $f_str (struct.get $S0 0 (global.get $S0)))) (f64.const 8.0) (f64.const 8.0))
      (if (global.get $ERRED) (then (return)))
      (call $h_ui_label (call $str_cat (call $str_cat (array.new_data $str $L4 (i32.const 0) (i32.const 5)) (call $f_str (struct.get $S0 1 (global.get $S0)))) (array.new_data $str $L5 (i32.const 0) (i32.const 2))) (f64.const 8.0) (f64.const 20.0))
      (if (global.get $ERRED) (then (return)))
      (call $h_ui_label (struct.get $S0 2 (global.get $S0)) (f64.const 8.0) (f64.const 32.0))
      (if (global.get $ERRED) (then (return)))
      (if (call $h_ui_button (array.new_data $str $L6 (i32.const 0) (i32.const 5)) (f64.const 20.0) (f64.const 60.0) (f64.const 90.0) (f64.const 28.0))
        (then
          (struct.set $S0 0 (global.get $S0) (f64.add (struct.get $S0 0 (global.get $S0)) (f64.const 1.0)))
        )
      )
      (if (if (result i32) (call $h_ui_button (array.new_data $str $L7 (i32.const 0) (i32.const 7)) (f64.const 130.0) (f64.const 60.0) (f64.const 90.0) (f64.const 28.0)) (then (f64.ge (struct.get $S0 0 (global.get $S0)) (f64.const 10.0))) (else (i32.const 0)))
        (then
          (struct.set $S0 0 (global.get $S0) (f64.sub (struct.get $S0 0 (global.get $S0)) (f64.const 10.0)))
          (struct.set $S0 1 (global.get $S0) (f64.add (struct.get $S0 1 (global.get $S0)) (f64.const 1.0)))
        )
      )
      (if (call $h_ui_button (array.new_data $str $L8 (i32.const 0) (i32.const 4)) (f64.const 75.0) (f64.const 110.0) (f64.const 90.0) (f64.const 28.0))
        (then
          (call $finish (i32.const 0))
          (return)
        )
      )
    )
    (func $run0_1
      (call $r0_1))
    ;; circle 0: Clicker
    (global $S0 (mut (ref $S0)) (struct.new $S0 (f64.const 0) (f64.const 0) (array.new_fixed $str 0)))
    (global $P0 (mut (ref $S0)) (struct.new $S0 (f64.const 0) (f64.const 0) (array.new_fixed $str 0)))
    (func $init0 (global.set $S0 (struct.new $S0 (f64.const 0.0) (f64.const 0.0) (array.new_data $str $L1 (i32.const 0) (i32.const 0)))))
    (func $publish0
      (struct.set $S0 0 (global.get $P0) (struct.get $S0 0 (global.get $S0)))
    )
    (func $pub0
      (call $pub_comma)
      (call $puts (i32.const 2099) (i32.const 16))
      (call $put_jn (struct.get $S0 0 (global.get $P0)))
    )
    (func $on_tick0
      (local $ob (ref null $buf))
      (call $run0_1))
    (func $prog_flow (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_nchildren (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_child (param $i i32) (param $k i32) (result i32)
      (i32.const -1))
    (func $prog_exit (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_init (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $init0) (return)))
      )
    (func $prog_publish (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $publish0) (return)))
      )
    (func $prog_has_outs (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_pub (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $pub0) (return)))
      )
    (func $prog_core (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $run0_0) (return)))
      )
    (func $prog_name (param $i i32) (result (ref $str))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $mem_str (i32.const 2139) (i32.const 7)))))
      (call $str_empty))
    (func $prog_find (param $s (ref null $str)) (result i32)
      (if (call $str_eq_mem (local.get $s) (i32.const 2139) (i32.const 7)) (then (return (i32.const 0))))
      (i32.const -1))
    (func $prog_has_on (param $i i32) (param $kind i32) (result i32)
      (if (i32.and (i32.eq (local.get $i) (i32.const 0)) (i32.eq (local.get $kind) (i32.const 3))) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_on_key (param $i i32) (param $k i32)
      )
    (func $prog_on_pointer (param $i i32) (param $k i32)
      )
    (func $prog_on_tick (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $on_tick0) (return)))
      )
    (func $prog_on_exit (param $i i32)
      )
    (func $prog_deliver (param $i i32) (param $m (ref null $Msg))
      )
    (func $prog_reply (param $i i32) (param $id f64) (param $text (ref $str))
      )
    (func $prog_resume (param $i i32) (param $fr anyref) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $r0_0w (ref.cast (ref $W0_0) (local.get $fr))))))
      (i32.const 0))
    (func $prog_until (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_dump (param $i i32))
    (func $prog_pdump (param $i i32))
    (func $prog_restore (param $i i32) (param $v (ref null $J)))
    (func $prog_prestore (param $i i32) (param $v (ref null $J)))
    (func $prog_guards (param $i i32))
    (global $ROOT i32 (i32.const 0))
    (global $N i32 (i32.const 1))
    (global $FPS f64 (f64.const 60.0))
    (global $DEBUG i32 (i32.const 0))
    (rec
      (type $W0_0 (struct (field (mut i32))))  ;; Clicker.grow
    )
    (data $L0 "LUCKY +10")
    (data $L1 "")
    (data $L2 "#123")
    (data $L3 "COOKIES ")
    (data $L4 "RATE ")
    (data $L5 "/s")
    (data $L6 "CLICK")
    (data $L7 "UPGRADE")
    (data $L8 "DONE")
    (data (i32.const 2048) "\22x\22:")
    (data (i32.const 2052) ",\22y\22:")
    (data (i32.const 2057) ",\22down\22:")
    (data (i32.const 2065) "/circles/0/rites/0/steps/0/steps/0")
    (data (i32.const 2099) "\22Clicker.count\22:")
    (data (i32.const 2115) "/circles/0/boundary/on/0")
    (data (i32.const 2139) "Clicker")
    (global $in_base i32 (i32.const 2160))
    (memory (export "memory") 3)
  
  '''
# ---
# name: test_program_snapshot[release-fib]
  '''
    (rec
      (type $S0 (struct (field (mut f64))))
    )
    (func $jf0 (param $v (ref null $F0))  ;; Pointer
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F0 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F0 1 (local.get $v)))
      (call $puts (i32.const 2057) (i32.const 8))
      (call $put_bool (struct.get $F0 2 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $r0_0 (param $l0 f64) (result f64) ;; Fib.fib
      (local $ob (ref null $buf))
      (local $l1 f64)
      (local $l2 f64)
      (local $l3 f64)
      (local $l4 f64)
      (local $l5 f64)
      (local $l6 f64)
      (local.set $l1 (f64.const 0.0))
      (local.set $l2 (f64.const 1.0))
      (local.set $l3 (f64.floor (local.get $l0)))
      (local.set $l4 (f64.const 0))
      (block $brk1
        (loop $loop2
          (br_if $brk1 (i32.eqz (f64.lt (local.get $l4) (local.get $l3))))
          (local.set $l5 (f64.add (local.get $l1) (local.get $l2)))
          (local.set $l1 (local.get $l2))
          (local.set $l2 (local.get $l5))
          (local.set $l4 (f64.add (local.get $l4) (f64.const 1)))
          (call $bud)
          (br_if $brk1 (global.get $ERRED))
          (br $loop2)
        )
      )
      (if (global.get $ERRED) (then (return (f64.const 0))))
      (local.set $l6 (local.get $l1))
      (return (local.get $l6))
      (unreachable)
    )
    (func $run0_0 (param $l0 f64)
      (drop (call $r0_0 (local.get $l0))))
    (func $r0_1 ;; Fib.main
      (local $ob (ref null $buf))
      (local $l0 f64)
      (call $bud)
      (if (global.get $ERRED) (then (return)))
      (local.set $l0 (call $r0_0 (f64.const 20.0)))
      (if (i32.or (global.get $ERRED) (call $stop (i32.const 0))) (then (return)))
      (struct.set $S0 0 (global.get $S0) (local.get $l0))
      (call $finish (i32.const 0))
      (return)
    )
    (func $run0_1
      (call $r0_1))
    ;; circle 0: Fib
    (global $S0 (mut (ref $S0)) (struct.new $S0 (f64.const 0)))
    (global $P0 (mut (ref $S0)) (struct.new $S0 (f64.const 0)))
    (func $init0 (global.set $S0 (struct.new $S0 (f64.const 0.0))))
    (func $publish0
      (struct.set $S0 0 (global.get $P0) (struct.get $S0 0 (global.get $S0)))
    )
    (func $pub0
      (call $pub_comma)
      (call $puts (i32.const 2065) (i32.const 13))
      (call $put_jn (struct.get $S0 0 (global.get $P0)))
    )
    (func $prog_flow (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_nchildren (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_child (param $i i32) (param $k i32) (result i32)
      (i32.const -1))
    (func $prog_exit (param $i i32) (result i32)
      (i32.const 0))
    (func $prog_init (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $init0) (return)))
      )
    (func $prog_publish (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $publish0) (return)))
      )
    (func $prog_has_outs (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_pub (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $pub0) (return)))
      )
    (func $prog_core (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (call $run0_1) (return)))
      )
    (func $prog_name (param $i i32) (result (ref $str))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $mem_str (i32.const 2078) (i32.const 3)))))
      (call $str_empty))
    (func $prog_find (param $s (ref null $str)) (result i32)
      (if (call $str_eq_mem (local.get $s) (i32.const 2078) (i32.const 3)) (then (return (i32.const 0))))
      (i32.const -1))
    (func $prog_has_on (param $i i32) (param $kind i32) (result i32)
      (i32.const 0))
    (func $prog_on_key (param $i i32) (param $k i32)
      )
    (func $prog_on_pointer (param $i i32) (param $k i32)
      )
    (func $prog_on_tick (param $i i32)
      )
    (func $prog_on_exit (param $i i32)
      )
    (func $prog_deliver (param $i i32) (param $m (ref null $Msg))
      )
    (func $prog_reply (param $i i32) (param $id f64) (param $text (ref $str))
      )
    (func $prog_resume (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_until (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_dump (param $i i32))
    (func $prog_pdump (param $i i32))
    (func $prog_restore (param $i i32) (param $v (ref null $J)))
    (func $prog_prestore (param $i i32) (param $v (ref null $J)))
    (func $prog_guards (param $i i32))
    (global $ROOT i32 (i32.const 0))
    (global $N i32 (i32.const 1))
    (global $FPS f64 (f64.const 60.0))
    (global $DEBUG i32 (i32.const 0))
    (data (i32.const 2048) "\22x\22:")
    (data (i32.const 2052) ",\22y\22:")
    (data (i32.const 2057) ",\22down\22:")
    (data (i32.const 2065) "\22Fib.answer\22:")
    (data (i32.const 2078) "Fib")
    (global $in_base i32 (i32.const 2096))
    (memory (export "memory") 3)
  
  '''
# ---
# name: test_program_snapshot[release-paddle]
  '''
    (rec
      (type $F1 (struct (field (mut f64)) (field (mut f64)) (field (mut f64)) (field (mut f64))))  ;; form Ball
      (type $S0 (struct))
      (type $S1 (struct (field (mut (ref $F1))) (field (mut f64)) (field (mut f64))))
      (type $S2 (struct (field (mut i32))))
    )
    (func $jf0 (param $v (ref null $F0))  ;; Pointer
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F0 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F0 1 (local.get $v)))
      (call $puts (i32.const 2057) (i32.const 8))
      (call $put_bool (struct.get $F0 2 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $jf1 (param $v (ref null $F1))  ;; Ball
      (call $putc (i32.const 123))
      (call $puts (i32.const 2048) (i32.const 4))
      (call $put_jn (struct.get $F1 0 (local.get $v)))
      (call $puts (i32.const 2052) (i32.const 5))
      (call $put_jn (struct.get $F1 1 (local.get $v)))
      (call $puts (i32.const 2065) (i32.const 6))
      (call $put_jn (struct.get $F1 2 (local.get $v)))
      (call $puts (i32.const 2071) (i32.const 6))
      (call $put_jn (struct.get $F1 3 (local.get $v)))
      (call $putc (i32.const 125)))
    (func $r1_0 ;; Play.begin
      (local $ob (ref null $buf))
      (struct.set $S1 2 (global.get $S1) (f64.const 0.0))
      (call $bud)
      (if (global.get $ERRED) (then (return)))
      (call $r1_1)
      (if (i32.or (global.get $ERRED) (call $stop (i32.const 1))) (then (return)))
    )
    (func $run1_0
      (call $r1_0))
    (func $r1_1 ;; Play.serve
      (local $ob (ref null $buf))
      (struct.set $S1 0 (global.get $S1) (struct.new $F1 (f64.const 160.0) (f64.const 40.0) (f64.const 90.0) (f64.const 70.0)))
    )
    (func $run1_1
      (call $r1_1))
    (func $r1_2 (param $l0 f64) ;; Play.step
      (local $ob (ref null $buf))
      (if (call $h_input_key (array.new_data $str $L0 (i32.const 0) (i32.const 9)))
        (then
          (struct.set $S1 1 (global.get $S1) (call $f_max (f64.const 0.0) (f64.sub (struct.get $S1 1 (global.get $S1)) (f64.mul (f64.const 180.0) (local.get $l0)))))
        )
      )
      (if (call $h_input_key (array.new_data $str $L1 (i32.const 0) (i32.const 10)))
        (then
          (struct.set $S1 1 (global.get $S1) (call $f_min (f64.const 280.0) (f64.add (struct.get $S1 1 (global.get $S1)) (f64.mul (f64.const 180.0) (local.get $l0)))))
        )
      )
      (struct.set $F1 0 (struct.get $S1 0 (global.get $S1)) (f64.add (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.mul (struct.get $F1 2 (struct.get $S1 0 (global.get $S1))) (local.get $l0))))
      (struct.set $F1 1 (struct.get $S1 0 (global.get $S1)) (f64.add (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.mul (struct.get $F1 3 (struct.get $S1 0 (global.get $S1))) (local.get $l0))))
      (if (if (result i32) (f64.lt (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.const 0.0)) (then (i32.const 1)) (else (f64.gt (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.const 320.0))))
        (then
          (struct.set $F1 2 (struct.get $S1 0 (global.get $S1)) (f64.neg (struct.get $F1 2 (struct.get $S1 0 (global.get $S1)))))
        )
      )
      (if (f64.lt (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.const 0.0))
        (then
          (struct.set $F1 3 (struct.get $S1 0 (global.get $S1)) (f64.neg (struct.get $F1 3 (struct.get $S1 0 (global.get $S1)))))
        )
      )
      (if (if (result i32) (if (result i32) (f64.gt (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.const 170.0)) (then (f64.ge (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (struct.get $S1 1 (global.get $S1)))) (else (i32.const 0))) (then (f64.le (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (f64.add (struct.get $S1 1 (global.get $S1)) (f64.const 40.0)))) (else (i32.const 0)))
        (then
          (struct.set $F1 3 (struct.get $S1 0 (global.get $S1)) (f64.mul (f64.neg (call $f_abs (struct.get $F1 3 (struct.get $S1 0 (global.get $S1))))) (f64.const 1.05)))
          (struct.set $S1 2 (global.get $S1) (f64.add (struct.get $S1 2 (global.get $S1)) (f64.const 1.0)))
          (call $h_audio_tone (f64.const 440.0) (f64.const 50.0))
          (if (global.get $ERRED) (then (return)))
        )
      )
      (if (f64.gt (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.const 180.0))
        (then
          (call $finish (i32.const 1))
          (return)
        )
      )
      (call $bud)
      (if (global.get $ERRED) (then (return)))
      (call $r1_3)
      (if (i32.or (global.get $ERRED) (call $stop (i32.const 1))) (then (return)))
    )
    (func $run1_2 (param $l0 f64)
      (call $r1_2 (local.get $l0)))
    (func $r1_3 ;; Play.paint
      (local $ob (ref null $buf))
      (call $h_canvas_clear (array.new_data $str $L2 (i32.const 0) (i32.const 4)))
      (if (global.get $ERRED) (then (return)))
      (call $h_canvas_ink (array.new_data $str $L3 (i32.const 0) (i32.const 4)))
      (if (global.get $ERRED) (then (return)))
      (call $h_canvas_rect (struct.get $S1 1 (global.get $S1)) (f64.const 172.0) (f64.const 40.0) (f64.const 4.0))
      (if (global.get $ERRED) (then (return)))
      (call $h_canvas_circle (struct.get $F1 0 (struct.get $S1 0 (global.get $S1))) (struct.get $F1 1 (struct.get $S1 0 (global.get $S1))) (f64.const 3.0))
      (if (global.get $ERRED) (then (return)))
      (call $h_canvas_text (call $str_cat (array.new_data $str $L4 (i32.const 0) (i32.const 6)) (call $f_str (struct.get $S1 2 (global.get $S1)))) (f64.const 4.0) (f64.const 4.0))
      (if (global.get $ERRED) (then (return)))
    )
    (func $run1_3
      (call $r1_3))
    (func $r2_0w (param $fr (ref $W2_0)) (result i32) ;; Result.show（wait を含む）
      (local $rs i32) (local $ob (ref null $buf))
      (local.set $rs (i32.ne (struct.get $W2_0 0 (local.get $fr)) (i32.const 0)))
      (if (i32.eqz (local.get $rs))
        (then
          (struct.set $S2 0 (global.get $S2) (i32.const 0))
        ))
      (if (local.get $rs)
        (then (if (i32.eq (struct.get $W2_0 0 (local.get $fr)) (i32.const 1)) (then (local.set $rs (i32.const 0)))))
        (else
          (global.set $WREQ_KIND (i32.const 1))
          (global.set $WREQ_TICKS (call $wait_ticks_of (f64.const 20.0)))
          (global.set $WREQ_PTR (call $mem_str (i32.const 2077) (i32.const 26)))
          (global.set $WREQ_TOP (local.get $fr))
          (struct.set $W2_0 0 (local.get $fr) (i32.const 1))
          (return (i32.const 1))))
      (i32.const 0))
    (func $run2_0
      (local $fr (ref null $W2_0))
      (local.set $fr (struct.new_default $W2_0))
      (if (call $r2_0w (ref.as_non_null (local.get $fr))) (then (call $register_wait (i32.const 2) (i32.const 0) (local.get $fr)))))
    (func $r2_1 ;; Result.menu
      (local $ob (ref null $buf))
      (call $h_canvas_clear (array.new_data $str $L2 (i32.const 0) (i32.const 4)))
      (if (global.get $ERRED) (then (return)))
      (call $h_canvas_text (call $str_cat (array.new_data $str $L4 (i32.const 0) (i32.const 6)) (call $f_str (struct.get $S1 2 (global.get $P1)))) (f64.const 120.0) (f64.const 60.0))
      (if (global.get $ERRED) (then (return)))
      (if (call $h_ui_button (array.new_data $str $L5 (i32.const 0) (i32.const 5)) (f64.const 120.0) (f64.const 100.0) (f64.const 80.0) (f64.const 24.0))
        (then
          (call $finish (i32.const 2))
          (return)
        )
      )
      (if (call $h_ui_button (array.new_data $str $L6 (i32.const 0) (i32.const 4)) (f64.const 120.0) (f64.const 130.0) (f64.const 80.0) (f64.const 24.0))
        (then
          (struct.set $S2 0 (global.get $S2) (i32.const 1))
          (call $finish (i32.const 2))
          (return)
        )
      )
    )
    (func $run2_1
      (call $r2_1))
    ;; circle 0: Game
    (func $init0)
    (func $publish0)
    (func $pub0)
    (func $exit0 (result i32) (struct.get $S2 0 (global.get $P2)))
    ;; circle 1: Play
    (global $S1 (mut (ref $S1)) (struct.new $S1 (struct.new $F1 (f64.const 0) (f64.const 0) (f64.const 0) (f64.const 0)) (f64.const 0) (f64.const 0)))
    (global $P1 (mut (ref $S1)) (struct.new $S1 (struct.new $F1 (f64.const 0) (f64.const 0) (f64.const 0) (f64.const 0)) (f64.const 0) (f64.const 0)))
    (func $init1 (global.set $S1 (struct.new $S1 (struct.new $F1 (f64.const 160.0) (f64.const 40.0) (f64.const 90.0) (f64.const 70.0)) (f64.const 140.0) (f64.const 0.0))))
    (func $publish1
      (struct.set $S1 2 (global.get $P1) (struct.get $S1 2 (global.get $S1)))
    )
    (func $pub1
      (call $pub_comma)
      (call $puts (i32.const 2103) (i32.const 13))
      (call $put_jn (struct.get $S1 2 (global.get $P1)))
    )
    (func $on_tick1
      (local $ob (ref null $buf))
      (call $run1_2 (f64.div (f64.const 1) (global.get $FPS))))
    ;; circle 2: Result
    (global $S2 (mut (ref $S2)) (struct.new $S2 (i32.const 0)))
    (global $P2 (mut (ref $S2)) (struct.new $S2 (i32.const 0)))
    (func $init2 (global.set $S2 (struct.new $S2 (i32.const 0))))
    (func $publish2
      (struct.set $S2 0 (global.get $P2) (struct.get $S2 0 (global.get $S2)))
    )
    (func $pub2
      (call $pub_comma)
      (call $puts (i32.const 2140) (i32.const 14))
      (call $put_bool (struct.get $S2 0 (global.get $P2)))
    )
    (func $on_tick2
      (local $ob (ref null $buf))
      (call $run2_1))
    (func $prog_flow (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 3))))
      (i32.const 0))
    (func $prog_nchildren (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (i32.const 2))))
      (i32.const 0))
    (func $prog_child (param $i i32) (param $k i32) (result i32)
      (if (i32.and (i32.eq (local.get $i) (i32.const 0)) (i32.eq (local.get $k) (i32.const 0))) (then (return (i32.const 1))))
      (if (i32.and (i32.eq (local.get $i) (i32.const 0)) (i32.eq (local.get $k) (i32.const 1))) (then (return (i32.const 2))))
      (i32.const -1))
    (func $prog_exit (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $exit0))))
      (i32.const 0))
    (func $prog_init (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $init1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $init2) (return)))
      )
    (func $prog_publish (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $publish1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $publish2) (return)))
      )
    (func $prog_has_outs (param $i i32) (result i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (return (i32.const 1))))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_pub (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $pub1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $pub2) (return)))
      )
    (func $prog_core (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $run1_0) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $run2_0) (return)))
      )
    (func $prog_name (param $i i32) (result (ref $str))
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $mem_str (i32.const 2178) (i32.const 4)))))
      (if (i32.eq (local.get $i) (i32.const 1)) (then (return (call $mem_str (i32.const 2182) (i32.const 4)))))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (return (call $mem_str (i32.const 2186) (i32.const 6)))))
      (call $str_empty))
    (func $prog_find (param $s (ref null $str)) (result i32)
      (if (call $str_eq_mem (local.get $s) (i32.const 2178) (i32.const 4)) (then (return (i32.const 0))))
      (if (call $str_eq_mem (local.get $s) (i32.const 2182) (i32.const 4)) (then (return (i32.const 1))))
      (if (call $str_eq_mem (local.get $s) (i32.const 2186) (i32.const 6)) (then (return (i32.const 2))))
      (i32.const -1))
    (func $prog_has_on (param $i i32) (param $kind i32) (result i32)
      (if (i32.and (i32.eq (local.get $i) (i32.const 1)) (i32.eq (local.get $kind) (i32.const 3))) (then (return (i32.const 1))))
      (if (i32.and (i32.eq (local.get $i) (i32.const 2)) (i32.eq (local.get $kind) (i32.const 3))) (then (return (i32.const 1))))
      (i32.const 0))
    (func $prog_on_key (param $i i32) (param $k i32)
      )
    (func $prog_on_pointer (param $i i32) (param $k i32)
      )
    (func $prog_on_tick (param $i i32)
      (if (i32.eq (local.get $i) (i32.const 1)) (then (call $on_tick1) (return)))
      (if (i32.eq (local.get $i) (i32.const 2)) (then (call $on_tick2) (return)))
      )
    (func $prog_on_exit (param $i i32)
      )
    (func $prog_deliver (param $i i32) (param $m (ref null $Msg))
      )
    (func $prog_reply (param $i i32) (param $id f64) (param $text (ref $str))
      )
    (func $prog_resume (param $i i32) (param $fr anyref) (result i32)
      (if (i32.eq (local.get $i) (i32.const 0)) (then (return (call $r2_0w (ref.cast (ref $W2_0) (local.get $fr))))))
      (i32.const 0))
    (func $prog_until (param $i i32) (param $fr anyref) (result i32)
      (i32.const 0))
    (func $prog_dump (param $i i32))
    (func $prog_pdump (param $i i32))
    (func $prog_restore (param $i i32) (param $v (ref null $J)))
    (func $prog_prestore (param $i i32) (param $v (ref null $J)))
    (func $prog_guards (param $i i32))
    (global $ROOT i32 (i32.const 0))
    (global $N i32 (i32.const 3))
    (global $FPS f64 (f64.const 60.0))
    (global $DEBUG i32 (i32.const 0))
    (rec
      (type $W2_0 (struct (field (mut i32))))  ;; Result.show
    )
    (data $L0 "ArrowLeft")
    (data $L1 "ArrowRight")
    (data $L2 "#000")
    (data $L3 "#fff")
    (data $L4 "SCORE ")
    (data $L5 "RETRY")
    (data $L6 "QUIT")
    (data (i32.const 2048) "\22x\22:")
    (data (i32.const 2052) ",\22y\22:")
    (data (i32.const 2057) ",\22down\22:")
    (data (i32.const 2065) ",\22vx\22:")
    (data (i32.const 2071) ",\22vy\22:")
    (data (i32.const 2077) "/circles/2/rites/0/steps/1")
    (data (i32.const 2103) "\22Play.score\22:")
    (data (i32.const 2116) "/circles/1/boundary/on/0")
    (data (i32.const 2140) "\22Result.quit\22:")
    (data (i32.const 2154) "/circles/2/boundary/on/0")
    (data (i32.const 2178) "Game")
    (data (i32.const 2182) "Play")
    (data (i32.const 2186) "Result")
    (global $in_base i32 (i32.const 2192))
    (memory (export "memory") 3)
  
  '''
# ---
